# h5radiomics

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  feature_list.txt  pyproject.toml  requirements.txt
.legacy/: .gitignore  feature_list.txt  pyproject.toml
.legacy/configs/: fast_full_extract.yaml
.legacy/src/h5radiomics/: __init__.py
.legacy/src/h5radiomics/config/: base.py  segment.py  statistics.py
.legacy/src/h5radiomics/engines/: __init__.py  segment.py  statistics.py
.legacy/src/h5radiomics/engines/extractors/: builders.py  cell_distribution.py  patch_processor.py
.legacy/src/h5radiomics/pipelines/: run_extract.py
configs/: default.yaml  detailed_full_sample.yaml  extract.yaml  full.yaml  segment.yaml  segment_cellvit.yaml  statistics.yaml  stats.yaml
data/: README.md
docs/: conf.py  index.md
docs/gettingstart/: stepbystep.md
docs/outputs/: overview.md  radiomics.md  segment.md
notebooks/: extract_radiomics_example.ipynb  load_parquet_example.ipynb
scripts/: run_radiomics_benchh5all.sh
src/: config.yaml  extract_radiomics.py  extract_radiomics_utils.py  segment_cellvit.py  utils.py  visualize_segmentation.py
src/h5radiomics/: extract_radiomics.py  feature_statistics.py  run.py  segment_cellvit.py
src/h5radiomics/config/: __init__.py  base.py  extract.py  segment.py  statistics.py
src/h5radiomics/engines/: README.md  __init__.py  constants.py  extract.py  extract_radiomics.py  feature_statistics.py  segment.py  segment_cellvit.py  statistics.py
src/h5radiomics/engines/extractors/: __init__.py  builders.py  cell_distribution.py  constants.py  intensity_texture.py  patch_processor.py  (+2 more)
src/h5radiomics/pipelines/: run_extract.py  run_full.py  run_inspection.py  run_segment.py  run_statistics.py  run_step.py
src/h5radiomics/utils/: __init__.py  config.py  feature_utils.py  inspect_h5.py  maskgeo.py  patchio.py  paths.py  utils.py
src/hestradiomics/: _download_hest.py  _extract.py  _segment.py  _statistics.py  config.py  run.py
src/hestradiomics/analysis/: __init__.py  statistics.py  visualize_segment.py
src/hestradiomics/extract/: __init__.py  _cellcomposition.py  _cellshape.py  _intensity_texture.py  constants.py  pipeline.py  postprocess.py
src/hestradiomics/extractors/: README.md  __init__.py  _intensity_texture.py  _shape.py  builders.py  cell_distribution.py  intensity_texture.py  patch_processor.py  postprocess.py
src/hestradiomics/hest/: __init__.py  geneset.py
src/hestradiomics/segment/: __init__.py  io.py  pipeline.py
src/hestradiomics/utils/: __init__.py  io.py  patchio.py
tests/: README.md
